# ArduinoLibrarySkeleton_dev

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  extra_script.py  platformio.ini
qtest/: tst_arduinolibraryskeleton.cpp
src/: main.cpp
test/: test_main.cpp
test/test_integration_gtest/: CMakeLists.txt  test_integration_gtest.cpp
test/test_integration_unity/: test_integration_unity.cpp
test/test_unit_gtest/: CMakeLists.txt  test_unit_gtest.cpp
test/test_unit_unity/: test_unit_unity.cpp
